--- a/.github/workflows/jira-issues.yaml
+++ b/.github/workflows/jira-issues.yaml
@@ -1,18 +1,16 @@
 on:
   issues:
     types: [opened, closed, deleted, reopened]
-  pull_request_target:
-    types: [opened, closed, reopened]
   issue_comment:
     types: [created]
   workflow_dispatch:
 
-name: Jira Sync
+name: Jira Community Issue Sync
 
 jobs:
   sync:
     runs-on: ubuntu-latest
-    name: Jira sync
+    name: Jira Community Issue sync
     steps:    
       - name: Login
         uses: atlassian/gajira-login@v3.0.0
@@ -20,15 +18,11 @@ jobs:
           JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
           JIRA_USER_EMAIL: ${{ secrets.JIRA_USER_EMAIL }}
           JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
-
+          
       - name: Set ticket type
         id: set-ticket-type
         run: |
-          if [[ "${{ github.event_name == 'pull_request' && github.event.action == 'opened' }}" == "true" ]]; then
-            echo "TYPE=PR" >> $GITHUB_OUTPUT
-          else
-            echo "TYPE=GH Issue" >> $GITHUB_OUTPUT
-          fi
+          echo "TYPE=GH Issue" >> $GITHUB_OUTPUT
           
       - name: Set ticket labels
         if: github.event.action == 'opened'
@@ -39,34 +33,19 @@ jobs:
           if [[ "${{ contains(github.event.issue.labels.*.name, 'type/enhancement') }}" == "true" ]]; then LABELS+="\"type/enhancement\", "; fi
           if [[ ${#LABELS} != 1 ]]; then LABELS=${LABELS::-2}"]"; else LABELS+="]"; fi
           echo "LABELS=${LABELS}" >> $GITHUB_OUTPUT
-          
-      - name: Check if team member
-        if: github.event.action == 'opened' && steps.set-ticket-type.outputs.TYPE == 'PR'
-        id: is-team-member
-        run: |
-          TEAM=consul
-          ROLE="$(hub api orgs/hashicorp/teams/${TEAM}/memberships/${{ github.actor }} | jq -r '.role | select(.!=null)')"
-          if [[ -n ${ROLE} ]]; then
-            echo "Actor ${{ github.actor }} is a ${TEAM} team member"
-            echo "MESSAGE=true" >> $GITHUB_OUTPUT
-          else
-            echo "Actor ${{ github.actor }} is NOT a ${TEAM} team member"
-            echo "MESSAGE=false" >> $GITHUB_OUTPUT
-          fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.JIRA_SYNC_GITHUB_TOKEN }}
 
       - name: Create ticket if an issue is filed, or if PR not by a team member is opened
-        if: ( github.event.action == 'opened' && steps.set-ticket-type.outputs.TYPE == 'GH Issue' ) || ( github.event.action == 'opened' && steps.is-team-member.outputs.MESSAGE == 'false' )
+        if: github.event.action == 'opened'
         uses: tomhjp/gh-action-jira-create@v0.2.0
         with:
           project: NET
           issuetype: "${{ steps.set-ticket-type.outputs.TYPE }}"
-          summary: "${{ github.event.repository.name }} [${{ steps.set-ticket-type.outputs.TYPE }} #${{ github.event.issue.number || github.event.pull_request.number }}]: ${{ github.event.issue.title || github.event.pull_request.title }}"
+          summary: "${{ github.event.repository.name }} [${{ steps.set-ticket-type.outputs.TYPE }} #${{ github.event.issue.number }}]: ${{ github.event.issue.title }}"
           description: "${{ github.event.issue.body || github.event.pull_request.body }}\n\n_Created in GitHub by ${{ github.actor }}._"
           # customfield_10089 is "Issue Link", customfield_10371 is "Source" (use JIRA API to retrieve)
           extraFields: '{ "customfield_10089": "${{ github.event.issue.html_url || github.event.pull_request.html_url }}",
-                          "customfield_10371": { "value": "GitHub" },            
+                          "customfield_10371": { "value": "GitHub" },
+                          "customfield_10535": [{ "value": "Service Mesh" }],
                           "components": [{ "name": "${{ github.event.repository.name }}" }],
                           "labels": ${{ steps.set-ticket-labels.outputs.LABELS }} }'
         env:
