Add envoyExtensions field to serviceDefaults and proxyDefaults CRDs (#1823)
* updated consul api to the latest

* added new ServiceDefault fields to the serviceDefaults CRD
- Added fields to support EnvoyExtensions
- Added missing BalanceInboundConnections field

* added EnvoyExtensions to proxyDefaults CRD
- most of these changes are parallel to what was done in serviceDefaults
- proxyDefaults makes use of the envoyExtension(s) definition in serviceDefaults and also makes use of the validation/toConsul logic defined there

* added tests for new fields
- Added tests for proxyDefault
- Added tests for serviceDefault
- EnvoyExtension test cases should be basically the same for both CRDs

* generate the manifests and generate deepcopy

* updated the changelog

* added CI test to catch bad terraform formatting

* formatted terraform files

* update contributing doc

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,20 @@ env:
   CONSUL_ENT_DOCKER_IMAGE: hashicorppreview/consul-enterprise:1.14-dev # Consul's enterprise version to use in tests
 
 jobs:
+  terraform-fmt-check:
+    name: "Terraform format check"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: TERRAFORM_VERSION
+          terraform_wrapper: false
+      - name: Run Terraform checks
+        run: |
+          make terraform-fmt-check TERRAFORM_DIR="${{ github.workspace }}"
+
   get-go-version:
     name: "Determine Go toolchain version"
     runs-on: ubuntu-latest
