feat: add peer to service-defaults overrides

--- a/charts/consul/templates/crd-servicedefaults.yaml
+++ b/charts/consul/templates/crd-servicedefaults.yaml
@@ -258,15 +258,15 @@ spec:
                             type: string
                         type: object
                       name:
-                        description: Name is only accepted within a service-defaults
+                        description: Name is only accepted within service ServiceDefaultsSpec.UpstreamConfig.Overrides
                           config entry.
                         type: string
                       namespace:
-                        description: Namespace is only accepted within a service-defaults
+                        description: Namespace is only accepted within service ServiceDefaultsSpec.UpstreamConfig.Overrides
                           config entry.
                         type: string
                       partition:
-                        description: Partition is only accepted within a service-defaults
+                        description: Partition is only accepted within service ServiceDefaultsSpec.UpstreamConfig.Overrides
                           config entry.
                         type: string
                       passiveHealthCheck:
@@ -291,6 +291,10 @@ spec:
                             format: int32
                             type: integer
                         type: object
+                      peer:
+                        description: Peer is only accepted within service ServiceDefaultsSpec.UpstreamConfig.Overrides
+                          config entry.
+                        type: string
                       protocol:
                         description: Protocol describes the upstream's service protocol.
                           Valid values are "tcp", "http" and "grpc". Anything else
@@ -357,15 +361,15 @@ spec:
                               type: string
                           type: object
                         name:
-                          description: Name is only accepted within a service-defaults
+                          description: Name is only accepted within service ServiceDefaultsSpec.UpstreamConfig.Overrides
                             config entry.
                           type: string
                         namespace:
-                          description: Namespace is only accepted within a service-defaults
+                          description: Namespace is only accepted within service ServiceDefaultsSpec.UpstreamConfig.Overrides
                             config entry.
                           type: string
                         partition:
-                          description: Partition is only accepted within a service-defaults
+                          description: Partition is only accepted within service ServiceDefaultsSpec.UpstreamConfig.Overrides
                             config entry.
                           type: string
                         passiveHealthCheck:
@@ -392,6 +396,10 @@ spec:
                               format: int32
                               type: integer
                           type: object
+                        peer:
+                          description: Peer is only accepted within service ServiceDefaultsSpec.UpstreamConfig.Overrides
+                            config entry.
+                          type: string
                         protocol:
                           description: Protocol describes the upstream's service protocol.
                             Valid values are "tcp", "http" and "grpc". Anything else
