--- a/control-plane/config/crd/bases/consul.hashicorp.com_servicedefaults.yaml
+++ b/control-plane/config/crd/bases/consul.hashicorp.com_servicedefaults.yaml
@@ -251,15 +251,15 @@ spec:
                             type: string
                         type: object
                       name:
-                        description: Name is only accepted within a service-defaults
+                        description: Name is only accepted within service ServiceDefaultsSpec.UpstreamConfig.Overrides
                           config entry.
                         type: string
                       namespace:
-                        description: Namespace is only accepted within a service-defaults
+                        description: Namespace is only accepted within service ServiceDefaultsSpec.UpstreamConfig.Overrides
                           config entry.
                         type: string
                       partition:
-                        description: Partition is only accepted within a service-defaults
+                        description: Partition is only accepted within service ServiceDefaultsSpec.UpstreamConfig.Overrides
                           config entry.
                         type: string
                       passiveHealthCheck:
@@ -284,6 +284,10 @@ spec:
                             format: int32
                             type: integer
                         type: object
+                      peer:
+                        description: Peer is only accepted within service ServiceDefaultsSpec.UpstreamConfig.Overrides
+                          config entry.
+                        type: string
                       protocol:
                         description: Protocol describes the upstream's service protocol.
                           Valid values are "tcp", "http" and "grpc". Anything else
@@ -350,15 +354,15 @@ spec:
                               type: string
                           type: object
                         name:
-                          description: Name is only accepted within a service-defaults
+                          description: Name is only accepted within service ServiceDefaultsSpec.UpstreamConfig.Overrides
                             config entry.
                           type: string
                         namespace:
-                          description: Namespace is only accepted within a service-defaults
+                          description: Namespace is only accepted within service ServiceDefaultsSpec.UpstreamConfig.Overrides
                             config entry.
                           type: string
                         partition:
-                          description: Partition is only accepted within a service-defaults
+                          description: Partition is only accepted within service ServiceDefaultsSpec.UpstreamConfig.Overrides
                             config entry.
                           type: string
                         passiveHealthCheck:
@@ -385,6 +389,10 @@ spec:
                               format: int32
                               type: integer
                           type: object
+                        peer:
+                          description: Peer is only accepted within service ServiceDefaultsSpec.UpstreamConfig.Overrides
+                            config entry.
+                          type: string
                         protocol:
                           description: Protocol describes the upstream's service protocol.
                             Valid values are "tcp", "http" and "grpc". Anything else
